; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_22101.c_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_22101.c_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"read user\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [36 x i8] c"connection closed by foreign host.\0A\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"read remote\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @shell(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [512 x i8], align 16
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  br label %6

6:                                                ; preds = %1, %55
  %7 = call i32 @FD_SET(i32 0, i32* %5)
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @FD_SET(i32 %8, i32* %5)
  %10 = load i32, i32* %2, align 4
  %11 = add nsw i32 %10, 1
  %12 = call i32 @select(i32 %11, i32* %5, i32* null, i32* null, i32* null)
  %13 = call i64 @FD_ISSET(i32 0, i32* %5)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %29

15:                                               ; preds = %6
  %16 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %17 = call i32 @read(i32 0, i8* %16, i32 512)
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp sle i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %15
  %21 = call i32 @perror(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %22 = load i32, i32* @EXIT_FAILURE, align 4
  %23 = call i32 @exit(i32 %22) #3
  unreachable

24:                                               ; preds = %15
  %25 = load i32, i32* %2, align 4
  %26 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @write(i32 %25, i8* %26, i32 %27)
  br label %29

29:                                               ; preds = %24, %6
  %30 = load i32, i32* %2, align 4
  %31 = call i64 @FD_ISSET(i32 %30, i32* %5)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %55

33:                                               ; preds = %29
  %34 = load i32, i32* %2, align 4
  %35 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %36 = call i32 @read(i32 %34, i8* %35, i32 512)
  store i32 %36, i32* %4, align 4
  %37 = load i32, i32* %4, align 4
  %38 = icmp eq i32 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %33
  %40 = call i32 @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0))
  %41 = load i32, i32* @EXIT_FAILURE, align 4
  %42 = call i32 @exit(i32 %41) #3
  unreachable

43:                                               ; preds = %33
  %44 = load i32, i32* %4, align 4
  %45 = icmp slt i32 %44, 0
  br i1 %45, label %46, label %50

46:                                               ; preds = %43
  %47 = call i32 @perror(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %48 = load i32, i32* @EXIT_FAILURE, align 4
  %49 = call i32 @exit(i32 %48) #3
  unreachable

50:                                               ; preds = %43
  br label %51

51:                                               ; preds = %50
  %52 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %53 = load i32, i32* %4, align 4
  %54 = call i32 @write(i32 1, i8* %52, i32 %53)
  br label %55

55:                                               ; preds = %51, %29
  br label %6
}

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
